--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "14.17.0"
+    "node": "14.x"
   }
   "dependencies": {
     "body-parser": "^1.18.3",
